--- a/index.html
+++ b/index.html
@@ -47,47 +47,27 @@
                 จึงทำให้จังหวัดจันทบุรีเป็นที่นิยมของนักท่องเที่ยว ทั้งไทยและต่างประเทศ</p>
         </div>
     </section>
-<!----------Big Menu---------->  
-<section class="head-words2">
-    <div class="head2-1">
-       <h1>โปรเลือกสถานประเภทของสถานที่เที่ยวที่ท่านต้องการ</h1>
-    </div>
-    <div class="Bigmenu">
-        <div class="logo1" data-aos="zoom-in">
-            <div class="img">
-                <a href="Chantrips-mountain.html">
-                    <img src="IMG\logo2.webp" data-aos-duration="500">
-                </a>  
-            </div>
-            <div class="text">
-                <a href="Chantrips-mountain.html">
-                    <h2>ภูเขา</h2>
-                </a>
-            </div>
+<!----------Menu types-------->
+<section class="menu-types">
+    <h1>รูปแบบของสถานที่ท่องเที่ยว</h1>
+    <div class="menu-types-items">
+        <div class="menu-types-item">
+            <a href="Chantrips-waterfall.html">
+                <img src="IMG\logo3.webp">
+                <h2>น้ำตก</h2>
+            </a>
         </div>
-        <div class="logo2" data-aos="zoom-in" data-aos-duration="1000">
-            <div class="img">
-                <a href="Chantrips-waterfall.html">
-                    <img src="IMG\logo3.webp">
-                </a>
-            </div>
-            <div class="text">
-                <a href="Chantrips-waterfall.html">
-                    <h2>น้ำตก</h2>
-                </a>
-            </div>
+        <div class="menu-types-item">
+            <a href="Chantrips-mountain.html">
+                <img src="IMG\logo2.webp">
+                <h2>ภูเขา</h2>
+            </a>
         </div>
-        <div class="logo3" data-aos="zoom-in" data-aos-duration="1500">
-            <div class="img">
-                <a href="Chantrips-sea.html">
-                    <img src="IMG\logo4.webp">
-                </a>
-            </div>
-            <div class="text">
-                <a href="Chantrips-sea.html">
-                    <h2>ทะเล</h2>
-                </a>
-            </div>
+        <div class="menu-types-item">
+            <a href="Chantrips-sea.html">
+                <img src="IMG\logo4.webp">
+                <h2>ทะเล</h2>
+            </a>
         </div>
     </div>
 </section>
