--- a/Chantrips-ความเป็นมาของเว็บไซต์.html
+++ b/Chantrips-ความเป็นมาของเว็บไซต์.html
@@ -55,10 +55,24 @@
             </div>
         </div>
     </section>
-    
-<!---------dataaos--------------->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+<!----------Footer----------> 
+<footer class="footer">
+    <div class="address">
+        <h2>ที่อยู่</h2>
+    </div>
+    <div class="question">
+        <a href="https://forms.gle/wrQuoXFQZxrP2Ntw6" target="_blank">แบบสอบถาม</a>
+    </div>
+    <div class="contact">
+        <h2>Contact Info</h2>
+        <h3>Number : 000 111 2222</h3>
+        <h3>Email : Chantrips@mail.com</h3>
+    </div>
+</footer>
+<!----------AOS--------------->
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
+</html>
