--- a/Chantrips-ความเป็นมาของเว็บไซต์.html
+++ b/Chantrips-ความเป็นมาของเว็บไซต์.html
@@ -26,34 +26,34 @@
         </ul>
     </header>
 <!-----------Body------------>
-    <section class="about">
-        <div class="title" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">
+    <section class="title">
+        <div class="about-website-head">
             <h1>ความเป็นมาของเว็บไซต์</h1>
-        </div>
-        <div class="text" data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">
             <p>เว็บนี้สร้างขึ้นเพื่อให้ผู้เยี่ยมชมทุกท่านได้สามารถศึกษาข้อมูลเกี่ยวกับจังหวัดจันทบุรี&nbsp;และหาข้อมูลสถานที่ท่องเที่ยวที่สนใจในจังหวัดจันทบุรี&nbsp;อีกทั้งยังเป็นการโปรโมทสถานที่ท่องเที่ยวจังหวัดจันทบุรีซึ่งจะส่งให้เศรษฐกิจของจังหวัดจันทบุรีดีขึ้น 
                 &nbsp;ตามมาอีกด้วยอีกทั้งยังเป็นการช่วยส่งเสริมการท่องเที่ยวของจังหวัดจันทบุรีอีกด้วย&nbsp;โดยเว็บนี้จะจัดทำขึ้นโดยนักเรียนระดับชั้นปวช.3/2แผนกคอมพิวเตอร์ธุรกิจMEP</p>
         </div>
-        <div class="people">
-            <h1>รายชื่อและหน้าที่ของผู้สร้างเว็บไซต์</h1>
-            <div class="creater">
-                <div class="creater-items">
-                    <img src="#">
-                    <h2>นายณัดฐนัย สุขกิจ</h2>
-                    <h3>จัดทำเอกสาร,ออกแบบเว็บไซต์,จัดหาข้อมูลสถานที่</h3>
-                </div>
-                <div class="creater-items">
-                    <img src="#">
-                    <h2>นายพีรพัฒน์ พร้อมพงษา</h2>
-                    <h3>จัดทำเอกสาร,ออกแบบเว็บไซต์,จัดหาข้อมูลสถานที่,ถ่ายรูปสถานที่</h3>
-                </div><div class="creater-items">
-                    <img src="#">
-                    <h2>นายเปรมมิน ทวีสุข</h2>
-                    <h3>จัดทำเอกสาร,ออกแบบเว็บไซต์,จัดหาข้อมูลสถานที่</h3>
-                </div>
-
+    </section>
+    <section class="title">
+        <div class="people-head">
+            <h1>คณะผู้วิจัย</h1>
             </div>
-        </div>
+            <div class="people">
+                <div class="people-items">
+                    <img src="IMG\people\people1.webp">
+                    <h3>นายณัฐดนัย สุขกิจ</h3>
+                    <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออแบบเว็บไซต์</h2>
+                </div>
+                <div class="people-items">
+                    <img src="IMG\people\people1.webp">
+                    <h3>นายเปรมมิน ทวีสุข</h3>
+                    <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออแบบเว็บไซต์</h2>
+                </div>
+                <div class="people-items">
+                    <img src="IMG\people\people1.webp">
+                    <h3>นายพีรพัฒน์ พร้อมพงษา</h3>
+                    <h2>จัดทำข้อมูล,สร้างเว็บไซต์,ออแบบเว็บไซต์</h2>
+                </div>
+            </div>
     </section>
 <!----------Footer----------> 
 <footer class="footer">
