--- a/Chantrips-สถานที่เที่ยว.html
+++ b/Chantrips-สถานที่เที่ยว.html
@@ -3,11 +3,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="style-travellocation.css">
+    <link rel="stylesheet" href="locations-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@200;500&display=swap" rel="stylesheet">
-    <link rel="icon" href="IMG\Logo.png">
+    <link rel="icon" href="IMG\Logo.webp">
 </head>
 <body>
 <!----------Menu---------->
@@ -47,36 +47,34 @@
 <!------------places------------------>
 <section id="places">
     <!---------------Waterfall--------------->
-    <div id="topic-waterfall">
-        <div class="topic-waterfall-head">
+    <div id="topic-location">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตก</h2><h3>น้ำตกที่แนะนำมีทั้งหมด 6 ที่ดังนี้</h3>
-        </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกพลิ้ว\IMG_0255_(3).webp"><a href="น้ำตกพลิ้ว.html">1.น้ำตกพลิ้ว<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกพลิ้ว น้ำตกทีเป็นหนึ่งในสถานที่ท่องเที่ยวที่ได้รับความนิยมเป็นอันดับต้นๆของจังหวัดจันทบุรี <br>เป็นหนึ่งในสถานที่ที่ผู้เยี่ยมชมจะต้องลองไปสัมผัสสักครั้ง</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกคลองนารายณ์\IMG_1279.webp"><a href="น้ำตกคลองนารายณ์.html">2.น้ำตกคลองนารายณ์<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกคลองนารายณ์ เป็นหนึ่งในน้ำตกในจังหวัดจันทบุรี มีที่เล่นน้ำหลายแอ่งและมีจุดเด่นคือความเป็นส่วนตัว</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกตรอกนอง\IMG_1294.webp"><a href="น้ำตกตรอกนอง.html">3.น้ำตกตรอกนอง<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกตรอกนอง หนึ่งในน้ำตกในจังหวัดจันทบุรีทีมีจุดเด่นคือ ธรรมชาติที่รมเย็น และเป็นหนึ่งในน้ำตกที่มีความเป็นส่วนตัว</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกคลองไพบูลย์\IMG_1223.webp"><a href="น้ำตกคลองไพบูรณ์.html">4.น้ำตกคลองไพบูลย์<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>น้ำตกคลองไพบูรณ์ เป็นน้ำตกที่มีน้ำให้เล่นทั้งปี มีจุดเด่นคือน้ำที่ใสมีจุดโดดน้ำหลายจุด สามารถเห็นตัวปลาได้ชัดเจน</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกกระทิง\IMG_1228.webp"><a href="น้ำตกกระทิง.html">5.น้ำตกกระทิง<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
             <p>หนึ่งในน้ำตกของจังหวัดจันทบุรี มีความเป็นธรรมชาติและความสวยงาน อีกทั้งยังมีน้ำตกหลายชั้นให้นักท่องเที่ยวได้เดินสำรวจตามเส้นทาง</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกเขาสอยดาว\IMG_1036.webp"><a href="น้ำตกเขาสอยดาว.html">6.น้ำตกเขาสอยดาว<br>
                 <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
                 <p>หนึ่งในน้ำตกในจังหวัดจันทบุรีที่สูงที่สุดในจังหวัดจันทบุรี และยังเป็นน้ำตกที่ได้ไกล้ชิดกับธรรมชาติมากที่สุดอีกด้วย</p>
@@ -84,93 +82,85 @@
         </div>
     </div>
     <!---------------Mountain----------------->
-    <div id="topic-mountain">
-        <div class="topic-mountain-head">
+    <div id="topic-location">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขา</h2><h3>ภูเขาที่แนะนำมีทั้งหมด 2 ที่ดังนี้</h3>
-        </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <a href="#">1.เขาคิชกูฏ<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
             <p>เป็นสถานที่ประทับของพระสัมมาสัมพุทธเจ้าทรงโปรดพำนักที่สำคัญแห่งหนึ่งในกรุงราชคฤห์ และได้มีเรื่องมหัศจรรย์เกิดขึ้น ณ ที่แห่งนี้</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <a href="#">2.ผาหมี<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2></a>
         </div>
     </div>
     <!--------------Beach/sea---------------->
-    <div id="topic-sea">
-        <div class="topic-sea-head">
-        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเล</h2><h3>ทะเลที่แนะนำมีทั้งหมด 7 ที่ดังนี้</h3>
-        </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+    <div id="topic-location">
+       <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเล</h2><h3>ทะเลที่แนะนำมีทั้งหมด 7 ที่ดังนี้</h3>
+       <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\หาดเจ้าหลาว\IMG_1358.webp"><a href="หาดเจ้าหลาว.html">1.หาดเจ้าหลาว<br>
             <h2>ทะเล</h2>
             <p>หาดมีน้ำใสสีฟ้าคราม มีร้านอาหารและที่พักให้บริการมากมายระหว่างทาง</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\หาดแหลมสิงห์\IMG_1364.webp"><a href="หาดแหลมสิงห์.html">2.หาดแหลมสิงห์<br>
             <h2>ทะเล</h2>
             <p>หาดแหลมสิงห์ เป็นหาดทรายขาวที่ทอดยาวริมฝั่งทะเล และมีร้านอาหารมากมาย</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\หาดคุ้งวิมาน\IMG_1343.webp"><a href="หาดคุ้งวิมาน.html">3.หาดคุ้งวิมาน<br>
             <h2>ทะเล</h2>
             <p>หาดขนาดเล็ก แต่รับรองความสวยงามไม่แพ้ที่อื่นแน่นอน</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\หาดแหลมเสด็จ\IMG_1347.webp"><a href="หาดแหลมเสด็จ.html">4.หาดแหลมเสด็จ<br>
             <h2>ทะเล</h2>
             <p>หาดแหลมเสด็จ หาดทรายขาว มีจุดเด่นคือสันเขื่อนกันน้ำที่สามารเดินถ่ายรูปได้ และมีร้านอาหารราคาถูกขายตลอดทาง</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\เนินนางพญา\IMG_0565.webp"><a href="จุดชมวิวเนินนางพญา.html">5.จุดชมวิวเนินนางพญา<br>
             <h2>ทะเล</h2>
             <p>หนึ่งในสถานที่ท่องเที่ยวยอดฮึตของจังหวัดจันทบุรี จุดชมวิวที่มีความสวยงาม และมีมุมถ่ายรูปมากมาย</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\เจดีย์กลางน้ำ\IMG_0560_(2).webp"><a href="เจดีย์กลางน้ำ.html">6.เจดีย์กลางน้ำ<br>
             <h2>ทะเล</h2>
             <p>เจดีย์สีขาวที่ตั้งอยู่กลางทะเล มีทางเดินที่ลักษณะคล้ายกับสะพานไม้ มุมถ่ายรูปที่หลากหลาย และสิ่งศักดิ์สิทธิ์ให้กราบไหว้บูชา</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\สะพานตากสินมหาราช\IMG_0923_(1).webp"><a href="สะพานตากสินมหาราช.html">7.สะพานตากสินมหาราช<br>
             <h2>ทะเล</h2>
             <p>สะพานข้ามแยกขนาดใหญ่ เชื่อมต่อระหว่างหาดแหลมสิงห์และอ่าวกระทิง มีลมพัดเย็นและจุดถ่ายรูป</p></a>
         </div>
     </div>
     <!---------------natural trails------------->
-    <div id="topic-naturaltrails">
-        <div class="topic-naturaltrails-head">
+    <div id="topic-location">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เส้นทางธรรมชาติ</h2><h3>เส้นทางธรรมชาติที่แนะนำมีทั้งหมด 1 ที่ดังนี้</h3>
-        </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\อ่าวคุ้งกระเบน\IMG_0599.webp"><a href="อ่าวคุ้งกระเบน.html">ศูนย์ศึกษาพัฒนาอ่าวคุ้งกระเบน<br>
             <h2>เส้นทางธรรมชาติ,ทะเล</h2>
             <p>เส้นทางเดินในป่าชายเลนติดริมอ่าวคุ้งกระเบน มีต้นไม้หลากหลายพันธ์ และหอชมนกให้บริการ</p></a>
         </div>
     </div>
     <!-----------------temple------------------->
-    <div id="topic-temple">
-        <div class="topic-temple-head">
+    <div id="topic-location">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัด</h2><h3>วัดที่แนะนำมีทั้งหมด 4 ที่ดังนี้</h3>
-        </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <a href="#">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล<br>
             <h2>วัด</h2>
             <p>อาสนวิหารที่สวยที่สุดในประเทศไทย หลังคาสร้างจากเรื่อ และรูปปั้นพระแม่มารีอา ที่ประดับด้วยเพชรพลอยมากมาย</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\วัดเขาชวัง\IMG_0852_(1).webp"><a href="วัดเขาชวัง.html">วัดเขาชวัง<br>
             <h2>วัด</h2>
             <p>วัดแห่งหนึ่งในอำเภอโป่งน้ำร้อน มีจุดเด่นคือลักษณะของวัดมีความคลายคลึงกับวัดทางภาคเหนือ และเสาทุกต้นในวัดเแห่งนี้ป็นไม้แกะสลักทั้งหมด</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\วัดเขาบรรจบ\IMG_0804.webp"><a href="วัดเขาบรรจบ.html">วัดเขาบรรจบ<br>
             <h2>วัด</h2>
             <p>วัดแห่งนี้มีจุดเด่นคือความสวยงามท่ามกลางธรรมชาติ ถ้าไปถูกฤดูกาล จะได้พบกับความสวยงามที่คาดไม่ถึงทั้งป่าไม้ และน้ำตก</p></a>
         </div>
-        <div class="waterfall1" data-aos="fade-right"  data-aos-duration="1500">
+        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\วัดปากน้ำแขมหนู\IMG_0912_(1).webp"><a href="วัดปากน้ำแขมหนู.html">วัดปากน้ำแขมหนู<br>
             <h2>วัด,ทะเล</h2>
             <p>จุดเด่นของวัดแห่งนี้คือ กระเบื้องหลังคาที่เป็นสีฟ้าคราม เมื่อถึงเวลาที่แดดออกฟ้าสีครามจะทำเกิดความสวยงามอย่างมาก</p></a>
