--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@200;500&display=swap" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <link rel="icon" href="IMG\Logo.png">
+    <link rel="icon" href="IMG\Logo.webp">
 </head>
 <body>
+
 <!----------Menu---------->
     <header id="head">
         <div class="logo">
