--- a/Chantrips-ความเป็นมาของเว็บไซต์.html
+++ b/Chantrips-ความเป็นมาของเว็บไซต์.html
@@ -41,17 +41,17 @@
                 <div class="people-items">
                     <img src="IMG\people\people1.webp">
                     <h3>นายณัฐดนัย สุขกิจ</h3>
-                    <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออแบบเว็บไซต์</h2>
+                    <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออกแบบเว็บไซต์</h2>
                 </div>
                 <div class="people-items">
                     <img src="IMG\people\people1.webp">
                     <h3>นายเปรมมิน ทวีสุข</h3>
-                    <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออแบบเว็บไซต์</h2>
+                    <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออกแบบเว็บไซต์</h2>
                 </div>
                 <div class="people-items">
                     <img src="IMG\people\people1.webp">
                     <h3>นายพีรพัฒน์ พร้อมพงษา</h3>
-                    <h2>จัดทำข้อมูล,สร้างเว็บไซต์,ออแบบเว็บไซต์</h2>
+                    <h2>จัดทำข้อมูล,สร้างเว็บไซต์,ออกแบบเว็บไซต์</h2>
                 </div>
             </div>
     </section>
