--- a/Chantrips-ความเป็นมาของเว็บไซต์.html
+++ b/Chantrips-ความเป็นมาของเว็บไซต์.html
@@ -30,7 +30,7 @@
         <div class="about-website-head">
             <h1>ความเป็นมาของเว็บไซต์</h1>
             <p>เว็บนี้สร้างขึ้นเพื่อให้ผู้เยี่ยมชมทุกท่านได้สามารถศึกษาข้อมูลเกี่ยวกับจังหวัดจันทบุรี&nbsp;และหาข้อมูลสถานที่ท่องเที่ยวที่สนใจในจังหวัดจันทบุรี&nbsp;อีกทั้งยังเป็นการโปรโมทสถานที่ท่องเที่ยวจังหวัดจันทบุรีซึ่งจะส่งให้เศรษฐกิจของจังหวัดจันทบุรีดีขึ้น 
-                &nbsp;ตามมาอีกด้วยอีกทั้งยังเป็นการช่วยส่งเสริมการท่องเที่ยวของจังหวัดจันทบุรีอีกด้วย&nbsp;โดยเว็บนี้จะจัดทำขึ้นโดยนักเรียนระดับชั้นปวช.3/2แผนกคอมพิวเตอร์ธุรกิจMEP</p>
+                &nbsp;ตามมาอีกด้วยอีก ทั้งยังเป็นการช่วยส่งเสริมการท่องเที่ยวของจังหวัดจันทบุรีให้ดีขึ้น&nbsp;โดยเว็บนี้จะจัดทำขึ้นโดยนักเรียนระดับชั้นปวช.3/2แผนกคอมพิวเตอร์ธุรกิจMEP วิทยลัยเทคนิคจันทบุรี</p>
         </div>
     </section>
     <section class="title">
@@ -39,17 +39,17 @@
             </div>
             <div class="people">
                 <div class="people-items">
-                    <img src="IMG\people\people1.webp">
+                    <img src="places\creater\IMG_1445.webp">
                     <h3>นายณัฐดนัย สุขกิจ</h3>
                     <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออกแบบเว็บไซต์</h2>
                 </div>
                 <div class="people-items">
-                    <img src="IMG\people\people1.webp">
+                    <img src="places\creater\IMG_1446.webp">
                     <h3>นายเปรมมิน ทวีสุข</h3>
                     <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออกแบบเว็บไซต์</h2>
                 </div>
                 <div class="people-items">
-                    <img src="IMG\people\people1.webp">
+                    <img src="places\creater\IMG_1444.webp">
                     <h3>นายพีรพัฒน์ พร้อมพงษา</h3>
                     <h2>จัดทำข้อมูล,สร้างเว็บไซต์,ออกแบบเว็บไซต์</h2>
                 </div>
@@ -66,8 +66,7 @@
     <div class="contact">
         <h2>Contact Info</h2>
         <h3>Number : 000 111 2222</h3>
-        <h3>Email : Chantrips@mail.com</h3>
-    </div>
+        </div>
 </footer>
 <!----------AOS--------------->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
