--- a/Chantrips-waterfall.html
+++ b/Chantrips-waterfall.html
@@ -25,31 +25,23 @@
         <li><a href="Chantrips-ความเป็นมาของเว็บไซต์.html">ความเป็นมาของเว็บไซต์</a></li>
     </ul>
 </header>
-<!----------Body------------>
-<section class="place-types">
-    <div class="place-types-topic">
-    <h1 data-aos="fade-up">ประเภทของสถานที่ท่องเที่ยว</h1>
-    </div>
-        <div class="place-types-places">
-            <div class="place-types-types-mountain">
-                <a href="Chantrips-mountain.html">ภูเขา</a>
-            </div>
-            <div class="place-types-types-sea">
-                <a href="Chantrips-sea.html">ทะเล</a>
-            </div>
-            <div class="place-types-types-naturaltrails">
-                <a href="Chantrips-naturaltrails.html">เส้นทางธรรมชาติ</a>
-            </div>
-            <div class="place-types-types-temples">
-                <a href="Chantrips-temples.html">วัด/โบส</a>
-            </div>
-        </div>
-</section>
 <!------------places------------------>
 <section id="places">
+    <section class="place-types">
+        <h1 data-aos="fade-up">ประเภทของสถานที่ท่องเที่ยว</h1>
+        <div class="place-types-places">
+                <a href="Chantrips-waterfall.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="500">น้ำตก</a><br>
+                <a href="Chantrips-mountain.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">ภูเขา</a><br>
+                <a href="Chantrips-sea.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">ทะเล</a><br>
+                <a href="Chantrips-naturaltrails.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="2000">เส้นทางธรรมชาติ</a><br>
+                <a href="Chantrips-temples.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="2500">วัด/โบส</a>
+        </div>
+    </section>
     <!---------------Waterfall--------------->
     <div id="topic-location">
-        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตก</h2><h3>น้ำตกที่แนะนำมีทั้งหมด 6 ที่ดังนี้</h3>
+        <div class="topic-location-title">
+        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตก</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตกที่แนะนำมีทั้งหมด 6 ที่ดังนี้</h3>
+        </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกพลิ้ว\IMG_0255_(3).webp"><a href="น้ำตกพลิ้ว.html">1.น้ำตกพลิ้ว<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
@@ -104,3 +96,4 @@
 </script>
 </body>
 </html>
+
