--- a/Chantrips-naturaltrails.html
+++ b/Chantrips-naturaltrails.html
@@ -25,31 +25,21 @@
         <li><a href="Chantrips-ความเป็นมาของเว็บไซต์.html">ความเป็นมาของเว็บไซต์</a></li>
     </ul>
 </header>
-<!----------Body------------>
-<section class="place-types">
-    <div class="place-types-topic">
-    <h1 data-aos="fade-up">ประเภทของสถานที่ท่องเที่ยว</h1>
-    </div>
-        <div class="place-types-places">
-            <div class="place-types-types-waterfall">
-                <a href="Chantrips-waterfall.html">น้ำตก</a>
-            </div>
-            <div class="place-types-types-mountain">
-                <a href="Chantrips-mountain.html">ภูเขา</a>
-            </div>
-            <div class="place-types-types-sea">
-                <a href="Chantrips-sea.html">ทะเล</a>
-            </div>
-            <div class="place-types-types-temples">
-                <a href="Chantrips-temples.html">วัด/โบส</a>
-            </div>
-        </div>
-</section>
 <!------------places------------------>
 <section id="places">
+    <section class="place-types">
+        <h1 data-aos="fade-up">ประเภทของสถานที่ท่องเที่ยว</h1>
+        <div class="place-types-places">
+                <a href="Chantrips-waterfall.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="500">น้ำตก</a><br>
+                <a href="Chantrips-mountain.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">ภูเขา</a><br>
+                <a href="Chantrips-sea.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">ทะเล</a><br>
+                <a href="Chantrips-naturaltrails.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="2000">เส้นทางธรรมชาติ</a><br>
+                <a href="Chantrips-temples.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="2500">วัด/โบส</a>
+        </div>
+    </section>
     <!---------------natural trails------------->
     <div id="topic-location">
-        <div class="topic-naturaltrails-head">
+        <div class="topic-location-title">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เส้นทางธรรมชาติ</h2><h3>เส้นทางธรรมชาติที่แนะนำมีทั้งหมด 1 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
