--- a/Chantrips-สถานที่เที่ยว.html
+++ b/Chantrips-สถานที่เที่ยว.html
@@ -30,26 +30,18 @@
     <section class="place-types">
         <h1 data-aos="fade-up">ประเภทของสถานที่ท่องเที่ยว</h1>
         <div class="place-types-places">
-                <div class="place-types-types-waterfall">
-                    <a href="Chantrips-waterfall.html">น้ำตก</a>
-                </div>
-                <div class="place-types-types-mountain">
-                    <a href="Chantrips-mountain.html">ภูเขา</a>
-                </div>
-                <div class="place-types-types-sea">
-                    <a href="Chantrips-sea.html">ทะเล</a>
-                </div>
-                <div class="place-types-types-naturaltrails">
-                    <a href="Chantrips-naturaltrails.html">เส้นทางธรรมชาติ</a>
-                </div>
-                <div class="place-types-types-temples">
-                    <a href="Chantrips-temples.html">วัด/โบส</a>
-                </div>
-            </div>
+                <a href="Chantrips-waterfall.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="500">น้ำตก</a><br>
+                <a href="Chantrips-mountain.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">ภูเขา</a><br>
+                <a href="Chantrips-sea.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">ทะเล</a><br>
+                <a href="Chantrips-naturaltrails.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="2000">เส้นทางธรรมชาติ</a><br>
+                <a href="Chantrips-temples.html" data-aos="fade-right" data-aos-once="true" data-aos-duration="2500">วัด/โบส</a>
+        </div>
     </section>
     <!---------------Waterfall--------------->
     <div id="topic-location">
-        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตก</h2><h3>น้ำตกที่แนะนำมีทั้งหมด 6 ที่ดังนี้</h3>
+        <div class="topic-location-title">
+        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตก</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">น้ำตกที่แนะนำมีทั้งหมด 6 ที่ดังนี้</h3>
+        </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\น้ำตกพลิ้ว\IMG_0255_(3).webp"><a href="น้ำตกพลิ้ว.html">1.น้ำตกพลิ้ว<br>
             <h2>น้ำตก,เส้นทางธรรมชาติ</h2>
@@ -84,7 +76,9 @@
     </div>
     <!---------------Mountain----------------->
     <div id="topic-location">
-        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขา</h2><h3>ภูเขาที่แนะนำมีทั้งหมด 2 ที่ดังนี้</h3>
+        <div class="topic-location-title">
+        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขา</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขาที่แนะนำมีทั้งหมด 2 ที่ดังนี้</h3>
+        </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <a href="#">1.เขาคิชกูฏ<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
@@ -97,7 +91,9 @@
     </div>
     <!--------------Beach/sea---------------->
     <div id="topic-location">
-       <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเล</h2><h3>ทะเลที่แนะนำมีทั้งหมด 7 ที่ดังนี้</h3>
+        <div class="topic-location-title">
+       <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเล</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ทะเลที่แนะนำมีทั้งหมด 7 ที่ดังนี้</h3>
+        </div>
        <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\หาดเจ้าหลาว\IMG_1358.webp"><a href="หาดเจ้าหลาว.html">1.หาดเจ้าหลาว<br>
             <h2>ทะเล</h2>
@@ -136,7 +132,9 @@
     </div>
     <!---------------natural trails------------->
     <div id="topic-location">
-        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เส้นทางธรรมชาติ</h2><h3>เส้นทางธรรมชาติที่แนะนำมีทั้งหมด 1 ที่ดังนี้</h3>
+        <div class="topic-location-title">
+        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เส้นทางธรรมชาติ</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เส้นทางธรรมชาติที่แนะนำมีทั้งหมด 1 ที่ดังนี้</h3>
+        </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <img src="IMG\อ่าวคุ้งกระเบน\IMG_0599.webp"><a href="อ่าวคุ้งกระเบน.html">ศูนย์ศึกษาพัฒนาอ่าวคุ้งกระเบน<br>
             <h2>เส้นทางธรรมชาติ,ทะเล</h2>
@@ -145,7 +143,9 @@
     </div>
     <!-----------------temple------------------->
     <div id="topic-location">
-        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัด</h2><h3>วัดที่แนะนำมีทั้งหมด 4 ที่ดังนี้</h3>
+        <div class="topic-location-title">
+        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัด</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัดที่แนะนำมีทั้งหมด 4 ที่ดังนี้</h3>
+        </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
             <a href="#">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล<br>
             <h2>วัด</h2>
